added first attempt at search
